# imchat

./: CMakeLists.txt  README.md
include/: dao-interface.h  easy-dao-implement.h  imchat.h  jspp.h  message-protocol.h  mongodb-access.h  rcf-idl.h  rcf-serialize.h  redis-access.h  resolver-interface.h  rpc-client.h  rpc-server-capability.h  rpc-server.h  rpc-sync-client-capability.h  server-configure.h  server-interface.h
src/: CMakeLists.txt  main.cpp
src/Logging Manager/: log-server-implement.cpp  log-server-implement.h
src/dao/: dao-implement.cpp  dao-implement.h  dao-interface.h  easy-dao-implement.cpp  easy-dao-implement.h  mongodb-access.cpp  mongodb-access.h  redis-access.cpp  redis-access.h
src/jspp-resolver/: jspp-resolver.cpp  jspp-resolver.h
src/message-server/: message-server-implement.cpp  message-server-implement.h  message-server.cpp  message-server.h
test/: CMakeLists.txt  dao-interface-test.cpp  mongodb-accesser-test.cpp  redis-accesser-test.cpp
